@@ -2,7 +2,7 @@
  *  R : A Computer Language for Statistical Data Analysis
  *  file console.c
  *  Copyright (C) 1998--2003  Guido Masarotto and Brian Ripley
- *  Copyright (C) 2004-6      The R Foundation
+ *  Copyright (C) 2004-7      The R Foundation
  *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -752,7 +752,12 @@ void consoleflush(control c)
 #define CHARTRANS 20
 #define OVERWRITE 15
 #define EOFKEY 26
-/* free ^G ^Q ^R ^S, perhaps ^I ^J */
+
+/* ^I for completion */
+
+#define TABKEY 9
+
+/* free ^G ^Q ^R ^S, perhaps ^J */
 
 static void storekey(control c,int k)
 {
@@ -760,12 +765,108 @@ static void storekey(control c,int k)
 
     if (p->kind == PAGER) return;
     if (k == BKSP) k = BACKCHAR;
+    if (k == TABKEY) {
+        performCompletion(c); 
+	return;
+    }
     if (p->numkeys >= NKEYS) {
 	gabeep();
 	return;;
      }
      p->kbuf[(p->firstkey + p->numkeys) % NKEYS] = k;
      p->numkeys++;
+}
+
+
+
+#include <Rinternals.h>
+#include <R_ext/Parse.h>
+
+static int rcompgen_available = -1;
+
+void performCompletion(control c)
+{
+    ConsoleData p = getdata(c);
+    int i, alen, max_show = 10, cursor_position = p->c - prompt_wid;
+    char *partial_line = LINE(NUMLINES - 1) + prompt_wid;
+    char *additional_text;
+    char pline[924], cmd[1024]; /* FIXME: what's a good upper bound? use malloc? */
+    SEXP cmdSexp, cmdexpr, ans = R_NilValue;
+    ParseStatus status;
+
+    if(!rcompgen_available) return;
+    
+    if(rcompgen_available < 0) {
+	/* First check if namespace is loaded */
+	if(findVarInFrame(R_NamespaceRegistry, install("rcompgen"))
+	   != R_UnboundValue) rcompgen_available = 1;
+	else { /* Then try to load it */
+	    char *p = "try(loadNamespace('rcompgen'), silent=TRUE)";
+	    PROTECT(cmdSexp = mkString(p));
+	    cmdexpr = PROTECT(R_ParseVector(cmdSexp, -1, &status, R_NilValue));
+	    if(status == PARSE_OK) {
+		for(i = 0; i < length(cmdexpr); i++)
+		    eval(VECTOR_ELT(cmdexpr, i), R_GlobalEnv);
+	    }
+	    UNPROTECT(2);
+	    if(findVarInFrame(R_NamespaceRegistry, install("rcompgen"))
+	       != R_UnboundValue) rcompgen_available = 1;
+	    else rcompgen_available = 0;
+	}
+    }
+
+    /* FIXME: need to escape quotes properly and check for overflow
+       (or implement this differently, maybe use install() ) */
+    strncpy(pline, partial_line, 923);
+    /* poor attempt at escaping quotes that sort of works */
+    alen = strlen(pline);
+    for (i = 0; i < alen; i++)
+        if (pline[i] == '\"') pline[i] = '\'';
+    snprintf(cmd, 1024, "rcompgen:::.win32consoleCompletion(\"%s\", %d)",
+	     pline, cursor_position);
+    PROTECT(cmdSexp = mkString(cmd));
+    cmdexpr = PROTECT(R_ParseVector(cmdSexp, -1, &status, R_NilValue));
+    if (status != PARSE_OK) {
+	UNPROTECT(2);
+	/* Uncomment next line to debug */
+	/* Rprintf("failed: %s \n", cmd); */
+	/* otherwise pretend that nothing happened and return */
+	return;
+    }
+    /* Loop is needed here as EXPSEXP will be of length > 1 */
+    for(i = 0; i < length(cmdexpr); i++)
+	ans = eval(VECTOR_ELT(cmdexpr, i), R_GlobalEnv);
+    UNPROTECT(2);
+
+    /* ans has the form list(addition, possible), where 'addition' is
+       unique additional text if any, and 'possible' is a character
+       vector holding possible completions if any (already formatted
+       for linewise printing in the current implementation).  If
+       'possible' has any content, we want to print those (or show in
+       status bar or whatever).  Otherwise add the 'additional' text
+       at the cursor */
+
+#define ADDITION 0
+#define POSSIBLE 1
+
+    alen = length(VECTOR_ELT(ans, POSSIBLE));
+    if (alen) {
+        /* make a copy of the current string first?
+	consolewrites(c, LINE(NUMLINES - 1));
+	consolewrites(c, "\n");
+	*/
+	for (i = 0; i < min(alen, max_show); i++) {
+	    consolewrites(c, CHAR(STRING_ELT(VECTOR_ELT(ans, POSSIBLE), i)));
+	    consolewrites(c, "\n");
+	}
+	if (alen > max_show)
+	    consolewrites(c, "\n[...truncated]\n");
+    }
+    additional_text = CHAR(STRING_ELT( VECTOR_ELT(ans, ADDITION), 0 ));
+    alen = strlen(additional_text);
+    if (alen) 
+	for (i = 0; i < alen; i++) storekey(c, additional_text[i]);
+    return;
 }
 
 void consolecmd(control c, char *cmd)
@@ -1954,6 +2055,7 @@ void  consolehelp()
     strcat(s,G_("\nNote: Console is updated only when some input is required.\n"));
     strcat(s,G_("  Use Ctrl+W to toggle this feature off/on.\n\n"));
     strcat(s,G_("Use ESC to stop the interpreter.\n\n"));
+    strcat(s,G_("TAB starts completion if package 'rcompgen' is installed.\n\n"));
     strcat(s,G_("Standard Windows hotkeys can be used to switch to the\n"));
     strcat(s,G_("graphics device (Ctrl+Tab or Ctrl+F6 in MDI, Alt+Tab in SDI)"));
     askok(s);
