@@ -2,7 +2,7 @@
  *  R : A Computer Language for Statistical Data Analysis
  *  file console.h
  *  Copyright (C) 1998--2003  Guido Masarotto and Brian Ripley
- *  Copyright (C) 2004-6      The R Foundation
+ *  Copyright (C) 2004-7      The R Foundation
  *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -23,6 +23,10 @@ typedef window console;
 typedef window pager;
 typedef window dataeditor;
 typedef window editor;
+
+
+void performCompletion(control c);
+
 
 void
 setconsoleoptions(char *fnname,int fnsty, int fnpoints,
